Add principal units
